--- a/tree_recognition/app/templates/example.html
+++ b/tree_recognition/app/templates/example.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Hey! you got the templating to work.</h1>
     <p>Good job! You are halfway there with the application.</p>
-    <h2>{{ data }} &gt;---- Put some dynamic data here please.</h2>
+    <h2>{{ data }} &lt;---- Put some dynamic data here please.</h2>
+    <p>I believe in you</p>
   </body>
 </html>
