tweaking the styling of the page

--- a/tree_recognition/app/templates/result.html
+++ b/tree_recognition/app/templates/result.html
@@ -1,10 +1,14 @@
-<ul>
+<div>
+  <img src="/static/images/tree-icon.png" alt="" width="32" height="32">
   <div>
-    <p>Type:</p>
+    <p class="key">Type:</p>
     <p>{{ type }}</p>
   </div>
+</div>
+<div>
+  <img src="/static/images/score-icon.png" alt="" width="32" height="32">
   <div>
-    <p>Score:</p>
+    <p class="key">Score:</p>
     <p>{{ score }}</p>
   </div>
-</ul>
+</div>
