--- a/tree_recognition/app/static/style.css
+++ b/tree_recognition/app/static/style.css
@@ -6,9 +6,10 @@
 
 html {
   background-color: var(--color-primary);
-  font-family: sans-serif;
-  font-size: 0.8em;
   color: var(--color-secondary);
+  font-size: 0.8em;
+  font-family: sans-serif;
+  font-weight: 400;
 }
 
 /* background patterns */
@@ -97,10 +98,4 @@ hr {
   border-width: calc(var(--border-width) / 4);
   border-color: var(--color-secondary);
   margin-block: 1.5em;
-}
-
-output#result {
-  text-align: center;
-  display: block;
-  min-height: 15em;
 }
