--- a/tree_recognition/app/static/uploadform.css
+++ b/tree_recognition/app/static/uploadform.css
@@ -67,6 +67,9 @@ form .buttons button:first-of-type {
 
 form label:hover, form button:hover {
   filter: brightness(0.95);
+}
+
+form label:active, form button:active {
   border-style: inset;
 }
 
