--- a/tree_recognition/app/templates/index.html
+++ b/tree_recognition/app/templates/index.html
@@ -7,6 +7,7 @@
   <title>Tree Recognition - Team Insiköörit</title>
   <link href="/static/style.css" rel="stylesheet">
   <link href="/static/uploadform.css" rel="stylesheet">
+  <link href="/static/result.css" rel="stylesheet">
   <script src="/static/previewimage.js" defer></script>
   <script src="https://unpkg.com/htmx.org@2.0.3"
     integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
@@ -55,7 +56,7 @@
             </div>
           </div>
           +
-          <input type="file" name="file" accept="image/*" hidden>
+          <input type="file" name="file" accept="image/*" hidden required>
         </label>
 
         <div class="buttons">
