added credits to the tree recognition web page

--- a/tree_recognition/app/templates/index.html
+++ b/tree_recognition/app/templates/index.html
@@ -56,7 +56,7 @@
             </div>
           </div>
           +
-          <input type="file" name="file" accept="image/*" hidden required>
+          <input id="file-input" type="file" name="file" accept="image/*" hidden required>
         </label>
 
         <div class="buttons">
@@ -77,6 +77,14 @@
         <hr>
 
         <output id="result"></output>
+
+        <div id="credits">
+          <p>&copy; Team Insiköörit - 1995</p>
+          <a href="https://github.com/sakuexe/insikoorit" target="_blank" aria-label="Github page">
+            <img src="/static/images/info.ico" alt="link to github" width="32" height="32">
+          </a>
+        </div>
+
       </form>
     </section>
 
