tweaked credits not always staying at the bottom of the window

--- a/tree_recognition/app/static/uploadform.css
+++ b/tree_recognition/app/static/uploadform.css
@@ -4,6 +4,8 @@ form {
   border-color: var(--color-secondary);
   padding: 1em;
   color: var(--color-primary);
+  display: flex;
+  flex-direction: column;
 }
 
 form h2, form p {
