the icons are now rendered with 'nearest-neighbor'
this way they stay looking extra crispy and nice and sweet when scaled.

--- a/tree_recognition/app/static/style.css
+++ b/tree_recognition/app/static/style.css
@@ -93,6 +93,10 @@ header > div:last-child > button {
   user-select: none;
 }
 
+img {
+  image-rendering: pixelated;
+}
+
 hr {
   border-style: inset;
   border-width: calc(var(--border-width) / 4);
