--- a/tree_recognition/app/templates/error.html
+++ b/tree_recognition/app/templates/error.html
@@ -1,4 +1,7 @@
-<div>
-  <h3>{{ code }}</h3>
-  <p>{{ message }}</p>
+<div id="error">
+  <img src="/static/images/warning.ico" alt="A red cross icon" width="32" height="32">
+  <div>
+    <h3>Error {{ code }}</h3>
+    <p>{{ message }}</p>
+  </div>
 </div>
