--- a/tree_recognition/app/templates/index.html
+++ b/tree_recognition/app/templates/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tree Recognition - Team Insiköörit</title>
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <link href="/static/style.css" rel="stylesheet">
   <link href="/static/uploadform.css" rel="stylesheet">
   <link href="/static/result.css" rel="stylesheet">
   <script src="/static/previewimage.js" defer></script>
+  <script src="/static/extras.js" defer></script>
   <script src="https://unpkg.com/htmx.org@2.0.3"
     integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
     crossorigin="anonymous"></script>
