--- a/tree_recognition/app/static/uploadform.css
+++ b/tree_recognition/app/static/uploadform.css
@@ -131,3 +131,38 @@ form button > p {
     content: "...";
   }
 }
+
+#credits {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#credits p {
+  opacity: 75%;
+}
+
+#credits a {
+  --tooltip-scale: 0;
+  position: relative;
+}
+
+#credits a::before {
+  --image-width: 32px;
+  content: attr(aria-label);
+  position: absolute;
+  top: -50%;
+  left: calc(var(--image-width) * -3.2);
+  transform: scale(var(--tooltip-scale)) translateY(50%);
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
+  border: calc(var(--border-width) / 2);
+  border-style: outset;
+  border-color: white;
+  padding: 0.5em 0.75em;
+  opacity: 100%;
+}
+
+#credits a:hover {
+  --tooltip-scale: 1;
+}
