--- a/tree_recognition/app/static/style.css
+++ b/tree_recognition/app/static/style.css
@@ -4,12 +4,24 @@
   --border-width: 5px;
 }
 
+@font-face {
+  font-family: w95fa;
+  src: url("/static/w95fa.woff2") format("woff2");
+}
+
 html {
   background-color: var(--color-primary);
   color: var(--color-secondary);
-  font-size: 0.8em;
-  font-family: sans-serif;
+  /*font-size: 0.9em;*/
+  font-family: w95fa, sans-serif;
   font-weight: 400;
+  line-height: 1.25;
+}
+
+button {
+  font-family: w95fa, sans-serif;
+  font-weight: 400;
+  font-size: 1em;
 }
 
 /* background patterns */
@@ -56,6 +68,7 @@ main > section {
   height: 100%;
 }
 
+/* top bar */
 header {
   --background: color-mix(in srgb, var(--color-primary) 40%, var(--color-secondary));
   display: flex;
@@ -66,7 +79,7 @@ header {
   color: var(--color-primary);
   grid-column: 1 / -1;
   margin: 0;
-  padding: 0.1em 0.5em;
+  padding: 0.25em;
 }
 
 header > div {
@@ -92,7 +105,7 @@ header > div:last-child > button {
   user-select: none;
 }
 
-img {
+img:not(.user-image) {
   image-rendering: pixelated;
 }
 
