--- a/tree_recognition/app/templates/result.html
+++ b/tree_recognition/app/templates/result.html
@@ -1,14 +1,25 @@
 <div>
-  <img src="/static/images/tree-icon.png" alt="" width="32" height="32">
+  <img src="/static/images/tree-icon.png" alt="icon of a tree" width="32" height="32">
   <div>
     <p class="key">Type:</p>
     <p>{{ type }}</p>
   </div>
 </div>
 <div>
-  <img src="/static/images/score-icon.png" alt="" width="32" height="32">
+  <img src="/static/images/score-icon.png" alt="Icon of a paper with a magnifier" width="32" height="32">
   <div>
     <p class="key">Score:</p>
     <p>{{ score }}</p>
+  </div>
+</div>
+<div>
+  <img src="/static/images/probabilities.png" alt="notebook with a cog icon" width="32" height="32">
+  <div>
+    <p class="key">Probabilities:</p>
+    <ul>
+    {% for prob in probabilities %}
+      <li>{{ prob.class_name }}: {{ prob.confidence }}</li>
+    {% endfor %}
+    </ul>
   </div>
 </div>
