--- a/tree_recognition/app/static/result.css
+++ b/tree_recognition/app/static/result.css
@@ -1,16 +1,18 @@
 output#result {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1em;
+  gap: 1.5em 1em; 
 }
 
 #response {
-  min-height: 8em;
+  --graph-height: 80px;
+  --padding-bottom: 3em;
+  min-height: calc((var(--graph-height) * 2) + var(--padding-bottom));
   flex-grow: 1;
-  padding-bottom: 2em;
+  padding-bottom: var(--padding-bottom);
 }
 
-output#result > div {
+output#result > div:not(:last-child) {
   display: flex;
   gap: 0.5em;
   text-align: start;
@@ -24,18 +26,64 @@ output#result div > p.key {
 
 output#result > div:last-child {
   grid-column: 1/-1;
-  /*padding-left: calc(32px + 0.5em);*/
 }
 
-output#result > div:last-child > div > ul {
+output#result > div:last-child > div {
+  --background-color: #020;
+  --foreground-color: #04dd04;
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  place-items: end;
+  gap: 1em;
+  height: var(--graph-height);
+  border: var(--border-width) inset white;
+  background-color: var(--background-color);
+  background-image: url("/static/images/grid-pattern.svg");
+  background-size: calc(5em / 5);
+  padding-inline: 0.5em;
+}
+
+/* the value bar */
+output#result .probability-bar {
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-wrap: wrap;
-  gap: 0em 0.5em;
+  align-items: end;
+}
+
+output#result .probability-bar {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em 0em;
+}
+
+/* the singular bar pieces */
+output#result .probability-bar > div {
+  background-color: var(--foreground-color);
+  width: 100%;
+  flex-grow: 1;
+}
+
+output#result .probability-bar > div:first-child {
+  background-color: var(--foreground-color);
+  width: 100%;
+  flex-shrink: 1;
+}
+
+output#result > div:last-child > ul {
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  text-align: center;
+  gap: 1em;
   margin: 0;
   padding: 0;
+  padding-inline: 0.5em;
 }
 
-output#result > div:last-child > div > ul > li {
+output#result > div:last-child > ul > li {
   list-style-type: none;
   padding: 0;
   margin: 0;
